--- a/PokerFace_FE/memorized/src/index.css
+++ b/PokerFace_FE/memorized/src/index.css
@@ -18,7 +18,7 @@
   --font-title: 'Pacifico', 'Dancing Script', 'Pretendard', cursive, sans-serif;
 }
 
-html, body {
+html {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -28,6 +28,15 @@ html, body {
   letter-spacing: 0.01em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  background: url('assets\grd.png') no-repeat center center fixed;
+  background-size: cover;
+  font-family: 'Arial', sans-serif;
 }
 
 * {
