--- a/PokerFace_FE/memorized/src/pages/Feed.css
+++ b/PokerFace_FE/memorized/src/pages/Feed.css
@@ -34,7 +34,7 @@
   color: #fff;
 }
 .feed-container {
-  max-width: 700px;
+  width: 1000px;
   margin: 0 auto;
   background: #fff;
   border-radius: 1.2rem;
@@ -66,6 +66,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  min-height: 300px;
 }
 .feed-card-user {
   color: #6a5acd;
