--- a/PokerFace_FE/memorized/src/pages/Search.css
+++ b/PokerFace_FE/memorized/src/pages/Search.css
@@ -1,5 +1,5 @@
 .search-card {
-  max-width: 420px;
+  width: 1000px;
   margin: 60px auto 0 auto;
   padding: 2.5rem 2rem 2rem 2rem;
   display: flex;
