--- a/PokerFace_FE/memorized/src/index.css
+++ b/PokerFace_FE/memorized/src/index.css
@@ -34,7 +34,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background: url('assets\grd.png') no-repeat center center fixed;
+  background: url('assets\bging.jpg') no-repeat center center fixed;
   background-size: cover;
   font-family: 'Arial', sans-serif;
 }
