--- a/PokerFace_FE/memorized/src/pages/Search.css
+++ b/PokerFace_FE/memorized/src/pages/Search.css
@@ -80,3 +80,16 @@
   font-size: 0.98rem;
   box-shadow: 0 1px 4px #b8b6ff11;
 } 
+
+.delete-btn {
+  background: var(--color-main-red);
+  color: #d1d1d1;
+  border: none;
+  border-radius: 0.5rem;
+  margin-left: 10px;
+  padding: 0;
+  font-size: 0.9rem;
+  cursor: pointer;
+  box-shadow: 0 1px 4px #ffcccc33;
+  transition: background 0.2s;
+}
